mdoification dans le pom